test/error/iface/errHfsm2.rzy
component
  ErrHfsm2
    input
      funcA();
      funcB();

    implementation hfsm( One )
    
    state One
    end
    
    transition 
      One to One by funcA();
      One to One by funcB();
      One to One by funcC();
    
  end

